@@ -19,6 +19,6 @@
 #ifndef __VERSION
 #define __VERSION
 
-#define VERSION "0.9.6.54 (2011-01-02)"
+#define VERSION "0.9.6.55 (2011-01-03)"
 
 #endif
